syntax = "proto3";

package user.v1;

import "buf/validate/validate.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string email = 2 [(buf.validate.field).string.email = true];
}

message CreateUserResponse {
  string id = 1;
}

message GetUserRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}
